Volume Object crash is back #82428

Closed
opened 2020-11-05 12:46:04 +01:00 by Steffen Dünner · 8 comments

System Information
Operating system: Linux-5.8.0-25-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.32.00

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-05 07:27, hash: 7bc7b7da2d
Worked: blender-2.92.0-564f3be20a6f-linux64 from Buildbot

Short description of error
Cycles rendering of a Volume Object instantly crashes Blender.
I reported a crash with volumes while preview rendering and changing the current frame a few weeks ago which was fixed. Now the crash seems to be back with a vengeance because it even crashes without the need to change the frame or scrub the timeline.
The 564f3be20a build from yesterday works flawlessly. Today's build fails as do my own builds of master.
Quick side note that might help:
Yesterday night when the crash occurred the first time with the latest builds I tried to narrow down the guilty commit. I did a git checkout 564f3be20a to compile the same build as the last working Buildbot build but still my build crashed. I noticed I had NanoVDB enabled. So I unchecked that option and rebuilt and voila it worked.
So it might be related to NanoVDB somehow? But did something change between yesterday's build and today's?

Exact steps for others to reproduce the error

  • Download the blend file
    Volume_Object_Crash_v01.blend
  • Open and set the viewport to preview render
  • Rendering tries to start but stalls during the "Updating Mesh" phase for 1-2 seconds
  • Crash

I built this scene as simple as possible and used the Mesh to Volume modifier. But it also successfully crashes with VDBs.

**System Information** Operating system: Linux-5.8.0-25-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.32.00 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-05 07:27, hash: `7bc7b7da2d` Worked: blender-2.92.0-564f3be20a6f-linux64 from Buildbot **Short description of error** Cycles rendering of a Volume Object instantly crashes Blender. I reported a crash with volumes while preview rendering and changing the current frame a few weeks ago which was fixed. Now the crash seems to be back with a vengeance because it even crashes without the need to change the frame or scrub the timeline. The 564f3be20a6 build from yesterday works flawlessly. Today's build fails as do my own builds of master. Quick side note that might help: Yesterday night when the crash occurred the first time with the latest builds I tried to narrow down the guilty commit. I did a git checkout 564f3be20a6 to compile the same build as the last working Buildbot build but still my build crashed. I noticed I had NanoVDB enabled. So I unchecked that option and rebuilt and voila it worked. So it might be related to NanoVDB somehow? But did something change between yesterday's build and today's? **Exact steps for others to reproduce the error** - Download the blend file [Volume_Object_Crash_v01.blend](https://archive.blender.org/developer/F9207876/Volume_Object_Crash_v01.blend) - Open and set the viewport to preview render - Rendering tries to start but stalls during the "Updating Mesh" phase for 1-2 seconds - Crash I built this scene as simple as possible and used the Mesh to Volume modifier. But it also successfully crashes with VDBs.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Kévin Dietrich self-assigned this 2020-11-05 13:30:34 +01:00

This is a different crash which was introduced by my refactor.

This is a different crash which was introduced by my refactor.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

@kevindietrich looks like this one is for you.

ccl::Mesh::tag_smooth_modified(ccl::Mesh * const this) (/home/jacques/blender-git/blender/intern/cycles/render/mesh.h:144)
ccl::Mesh::add_triangle(ccl::Mesh * const this, int v0, int v1, int v2, int shader_, bool smooth_) (/home/jacques/blender-git/blender/intern/cycles/render/mesh.cpp:355)
ccl::GeometryManager::create_volume_mesh(ccl::GeometryManager * const this, ccl::Volume * volume, ccl::Progress & progress) (/home/jacques/blender-git/blender/intern/cycles/render/volume.cpp:601)
ccl::GeometryManager::device_update_preprocess(ccl::GeometryManager * const this, ccl::Device * device, ccl::Scene * scene, ccl::Progress & progress) (/home/jacques/blender-git/blender/intern/cycles/render/geometry.cpp:1277)
ccl::Scene::device_update(ccl::Scene * const this, ccl::Device * device_, ccl::Progress & progress) (/home/jacques/blender-git/blender/intern/cycles/render/scene.cpp:246)
ccl::Scene::update(ccl::Scene * const this, ccl::Progress & progress, bool & kernel_switch_needed) (/home/jacques/blender-git/blender/intern/cycles/render/scene.cpp:502)
ccl::Session::update_scene(ccl::Session * const this) (/home/jacques/blender-git/blender/intern/cycles/render/session.cpp:1029)
ccl::Session::run_cpu(ccl::Session * const this) (/home/jacques/blender-git/blender/intern/cycles/render/session.cpp:789)
ccl::Session::run(ccl::Session * const this) (/home/jacques/blender-git/blender/intern/cycles/render/session.cpp:871)
std::__invoke_impl<void, void (ccl::Session::*&)(), ccl::Session*&>(void (ccl::Session::*&)(ccl::Session * const) __f, ccl::Session *& __t) (/usr/include/c++/10.2.0/bits/invoke.h:73)
std::__invoke<void (ccl::Session::*&)(), ccl::Session*&>(void (ccl::Session::*&)(ccl::Session * const) __fn) (/usr/include/c++/10.2.0/bits/invoke.h:95)
std::_Bind<void (ccl::Session::*(ccl::Session*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>)(std::_Bind<void (ccl::Session::*(ccl::Session*))()> * const this, std::tuple<> && __args) (/usr/include/c++/10.2.0/functional:416)
std::_Bind<void (ccl::Session::*(ccl::Session*))()>::operator()<, void>()(std::_Bind<void (ccl::Session::*(ccl::Session*))()> * const this) (/usr/include/c++/10.2.0/functional:499)
std::__invoke_impl<void, std::_Bind<void (ccl::Session::*(ccl::Session*))()>&>(std::__invoke_other, std::_Bind<void (ccl::Session::*(ccl::Session*))()>&)(std::_Bind<void (ccl::Session::*(ccl::Session*))()> & __f) (/usr/include/c++/10.2.0/bits/invoke.h:60)
std::__invoke_r<void, std::_Bind<void (ccl::Session::*(ccl::Session*))()>&>(std::_Bind<void (ccl::Session::*(ccl::Session*))()>&)(std::_Bind<void (ccl::Session::*(ccl::Session*))()> & __fn) (/usr/include/c++/10.2.0/bits/invoke.h:110)
std::_Function_handler<void (), std::_Bind<void (ccl::Session::*(ccl::Session*))()> >::_M_invoke(std::_Any_data const&)(const std::_Any_data & __functor) (/usr/include/c++/10.2.0/bits/std_function.h:291)
std::function<void ()>::operator()() const(const std::function<void()> * const this) (/usr/include/c++/10.2.0/bits/std_function.h:622)
ccl::thread::run(void * arg) (/home/jacques/blender-git/blender/intern/cycles/util/util_thread.cpp:52)
std::__invoke_impl<void*, void* (*)(void*), ccl::thread*>(void *(*&&)(void *) __f) (/usr/include/c++/10.2.0/bits/invoke.h:60)
std::__invoke<void* (*)(void*), ccl::thread*>(void *(*&&)(void *) __fn) (/usr/include/c++/10.2.0/bits/invoke.h:95)

[edit] oops, too slow :D

@kevindietrich looks like this one is for you. ``` ccl::Mesh::tag_smooth_modified(ccl::Mesh * const this) (/home/jacques/blender-git/blender/intern/cycles/render/mesh.h:144) ccl::Mesh::add_triangle(ccl::Mesh * const this, int v0, int v1, int v2, int shader_, bool smooth_) (/home/jacques/blender-git/blender/intern/cycles/render/mesh.cpp:355) ccl::GeometryManager::create_volume_mesh(ccl::GeometryManager * const this, ccl::Volume * volume, ccl::Progress & progress) (/home/jacques/blender-git/blender/intern/cycles/render/volume.cpp:601) ccl::GeometryManager::device_update_preprocess(ccl::GeometryManager * const this, ccl::Device * device, ccl::Scene * scene, ccl::Progress & progress) (/home/jacques/blender-git/blender/intern/cycles/render/geometry.cpp:1277) ccl::Scene::device_update(ccl::Scene * const this, ccl::Device * device_, ccl::Progress & progress) (/home/jacques/blender-git/blender/intern/cycles/render/scene.cpp:246) ccl::Scene::update(ccl::Scene * const this, ccl::Progress & progress, bool & kernel_switch_needed) (/home/jacques/blender-git/blender/intern/cycles/render/scene.cpp:502) ccl::Session::update_scene(ccl::Session * const this) (/home/jacques/blender-git/blender/intern/cycles/render/session.cpp:1029) ccl::Session::run_cpu(ccl::Session * const this) (/home/jacques/blender-git/blender/intern/cycles/render/session.cpp:789) ccl::Session::run(ccl::Session * const this) (/home/jacques/blender-git/blender/intern/cycles/render/session.cpp:871) std::__invoke_impl<void, void (ccl::Session::*&)(), ccl::Session*&>(void (ccl::Session::*&)(ccl::Session * const) __f, ccl::Session *& __t) (/usr/include/c++/10.2.0/bits/invoke.h:73) std::__invoke<void (ccl::Session::*&)(), ccl::Session*&>(void (ccl::Session::*&)(ccl::Session * const) __fn) (/usr/include/c++/10.2.0/bits/invoke.h:95) std::_Bind<void (ccl::Session::*(ccl::Session*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>)(std::_Bind<void (ccl::Session::*(ccl::Session*))()> * const this, std::tuple<> && __args) (/usr/include/c++/10.2.0/functional:416) std::_Bind<void (ccl::Session::*(ccl::Session*))()>::operator()<, void>()(std::_Bind<void (ccl::Session::*(ccl::Session*))()> * const this) (/usr/include/c++/10.2.0/functional:499) std::__invoke_impl<void, std::_Bind<void (ccl::Session::*(ccl::Session*))()>&>(std::__invoke_other, std::_Bind<void (ccl::Session::*(ccl::Session*))()>&)(std::_Bind<void (ccl::Session::*(ccl::Session*))()> & __f) (/usr/include/c++/10.2.0/bits/invoke.h:60) std::__invoke_r<void, std::_Bind<void (ccl::Session::*(ccl::Session*))()>&>(std::_Bind<void (ccl::Session::*(ccl::Session*))()>&)(std::_Bind<void (ccl::Session::*(ccl::Session*))()> & __fn) (/usr/include/c++/10.2.0/bits/invoke.h:110) std::_Function_handler<void (), std::_Bind<void (ccl::Session::*(ccl::Session*))()> >::_M_invoke(std::_Any_data const&)(const std::_Any_data & __functor) (/usr/include/c++/10.2.0/bits/std_function.h:291) std::function<void ()>::operator()() const(const std::function<void()> * const this) (/usr/include/c++/10.2.0/bits/std_function.h:622) ccl::thread::run(void * arg) (/home/jacques/blender-git/blender/intern/cycles/util/util_thread.cpp:52) std::__invoke_impl<void*, void* (*)(void*), ccl::thread*>(void *(*&&)(void *) __f) (/usr/include/c++/10.2.0/bits/invoke.h:60) std::__invoke<void* (*)(void*), ccl::thread*>(void *(*&&)(void *) __fn) (/usr/include/c++/10.2.0/bits/invoke.h:95) ``` [edit] oops, too slow :D

This issue was referenced by 6a2a6fa514

This issue was referenced by 6a2a6fa5143e7b115c47b8e2ef4787f569c670df

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82428
No description provided.