Fix T82428: Cycles crashes when building volume meshes

The Volume Node did not have all of the sockets from its Mesh base class
which are now required due to the recent socket API change.